--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/cmgt-portfolio/css/style.css">
     <title>Portfolio Niels Witberg</title>
 </head>
 <body>
@@ -40,7 +40,7 @@
         <div class="cardcontainer">
             <h3>Gamen</h3>
             <p>Gamen is een van mijn favoriete bezigheden. Ik houd van games zoals:</p>
-            <img src="/img/playingGames.png" alt="Games die ik speel">
+            <img src="/cmgt-portfolio/img/playingGames.png" alt="Games die ik speel">
             <ul>
                 <li>Overwatch</li>
                 <li>Witcher 3</li>
