--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <header>
-        <img src="/img/logo.png" alt="mylogo" width="100px" height="100px">
+        <img src="/cmgt-portfolio/img/logo.png" alt="mylogo" width="100px" height="100px">
     </header>
     <nav>
         <button class="button"><a href="#Wie">Wie ben ik?</a></button>
