--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <header>
-        <img src="/img/logo.png" alt="mylogo" width="100vw" height="100vw">
+        <img src="img/logo.png" alt="mylogo" width="100vw" height="100vw">
     </header>
     <nav>
         <button class="button"><a href="#Wie">Wie ben ik?</a></button>
@@ -45,7 +45,7 @@
             <h3>Gamen</h3>
 
             <p>Gamen is een van mijn favoriete bezigheden. Ik houd van games zoals:</p>
-            <img src="/img/playingGames.png" alt="Games die ik speel">
+            <img src="img/playingGames.png" alt="Games die ik speel">
             <ul>
                 <li>Overwatch</li>
                 <li>Witcher 3</li>
