--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!--Mijn logo in de header-->
     <header>
-        <img src="/img/logo.png" alt="mylogo">
+        <img src="img/logo.png" alt="mylogo">
         <h1>Portfolio Niels Witberg</h1>
     </header>
     <!--De navigatie bar-->
@@ -47,7 +47,7 @@
             <div class="container">
                 <div class="grid-1">
                 <h3>Gamen</h3>
-                <img src="/img/playingGames.png" alt="Games die ik speel">
+                <img src="img/playingGames.png" alt="Games die ik speel">
                 <p>Gamen is een van mijn favoriete bezigheden. Ik houd van games zoals:</p>
 
                 <ul>
