--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     </header>
     <!--De navigatie bar-->
     <nav>
-        <button class="button"><a href="#Wie">Wie ben ik?</a></button>
-        <button class="button"><a href="#Wat">Wat kan ik?</a></button>
-        <button class="button"><a href="#Waar">Waar ben ik?</a></button>
-        <button class="button"><a href="#Contact">Contact</a></button>
+        <button class="button"><a href="#wie">Wie ben ik?</a></button>
+        <button class="button"><a href="#wat">Wat kan ik?</a></button>
+        <button class="button"><a href="#waar">Waar ben ik?</a></button>
+        <button class="button"><a href="#contact">Contact</a></button>
     </nav>
     <!--De hero image-->
     <div class="hero-image">
