--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="hero-text">
             <h1>Niels Witberg</h1>
             <p>Ik ben een Webdesigner die de opleiding cmgt volgt op de Hogeschool Rotterdam.</p>
-            <button><a href="#Contact">Contact</a></button>
+            <button><a href="#contact">Contact</a></button>
         </div>
     </div>
     <main>
