--- a/index.html
+++ b/index.html
@@ -5,28 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=	, initial-scale=1.0">
     <!--link naar mijn stylesheet-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Portfolio Niels Witberg</title>
 </head>
 <body>
     <!--Mijn logo in de header-->
     <header>
-        <img src="img/logo.png" alt="mylogo">
+        <img src="/img/logo.png" alt="mylogo">
         <h1>Portfolio Niels Witberg</h1>
     </header>
     <!--De navigatie bar-->
     <nav>
+        <button class="button"><a href="projecten.html">Mijn projecten</a></button>
         <button class="button"><a href="#wie">Wie ben ik?</a></button>
         <button class="button"><a href="#wat">Wat kan ik?</a></button>
         <button class="button"><a href="#waar">Waar ben ik?</a></button>
         <button class="button"><a href="#contact">Contact</a></button>
+
     </nav>
     <!--De hero image-->
     <div class="hero-image">
         <div class="hero-text">
             <h1>Niels Witberg</h1>
             <p>Ik ben een Webdesigner die de opleiding cmgt volgt op de Hogeschool Rotterdam.</p>
-            <button><a href="#contact">Contact</a></button>
+            <button><a href="#Contact">Contact</a></button>
         </div>
     </div>
     <main>
@@ -47,7 +49,7 @@
             <div class="container">
                 <div class="grid-1">
                 <h3>Gamen</h3>
-                <img src="img/playingGames.png" alt="Games die ik speel">
+                <img src="/img/playingGames.png" alt="Games die ik speel">
                 <p>Gamen is een van mijn favoriete bezigheden. Ik houd van games zoals:</p>
 
                 <ul>
