--- a/projecten.html
+++ b/projecten.html
@@ -10,7 +10,7 @@
 <body>
     <!--Mijn logo in de header-->
     <header>
-        <img src="/img/logo.png" alt="mylogo">
+        <img src="img/logo.png" alt="mylogo">
         <h1>Portfolio Niels Witberg</h1>
     </header>
     <!--De navigatie bar-->
